cmake_minimum_required(VERSION 3.0)

set(sources_lgui
    lgui/basiccontainer.cpp
    lgui/basiccontainer.h
    lgui/buttongroup.h
    lgui/buttongroup.cpp
    lgui/cursorblinkhelper.h
    lgui/cursorblinkhelper.cpp
    lgui/dragdropevent.cpp
    lgui/dragdropevent.h
    lgui/dragrepresentation.cpp
    lgui/dragrepresentation.cpp
    lgui/eventfilter.cpp
    lgui/eventfilter.h
    lgui/gui.cpp
    lgui/gui.h
    lgui/focusevent.h
    lgui/focusevent.cpp
    lgui/ieventlistener.cpp
    lgui/ieventlistener.h
    lgui/ikeylistener.h
    lgui/ilayoutelement.h
    lgui/iwidgetlistener.h
    lgui/inputevent.h
    lgui/keyevent.cpp
    lgui/keyevent.h
    lgui/lgui_types.h
    lgui/lgui_layout_types.h
    lgui/lgui_layout_utils.h
    lgui/lgui_layout_utils.cpp
    lgui/mouseevent.cpp
    lgui/mouseevent.h
    lgui/signal.h
    lgui/timertickevent.cpp
    lgui/timertickevent.h
    lgui/vector_utils.h
    lgui/widget.h
    lgui/widget.cpp
    lgui/widgetpc.h
    lgui/widgetpc.cpp
    lgui/wordwrappedtext.h
    lgui/wordwrappedtext.cpp
    lgui/internal/dragdroptrackhelper.cpp
    lgui/internal/dragdroptrackhelper.h
    lgui/internal/eventdistributor.cpp
    lgui/internal/eventdistributor.h
    lgui/internal/eventhandler.cpp
    lgui/internal/eventhandler.h
    lgui/internal/eventhandlerbase.cpp
    lgui/internal/eventhandlerbase.h
    lgui/internal/focusmanager.h
    lgui/internal/focusmanager.cpp
    lgui/internal/mousehandler.cpp
    lgui/internal/mousehandler.h
    lgui/internal/mousestate.cpp
    lgui/internal/mousestate.h
    lgui/internal/mousetrackhelper.h
    lgui/internal/mousetrackhelper.cpp
    lgui/internal/timerhandler.h
    lgui/internal/timerhandler.cpp
    lgui/internal/trackhelper.h
    lgui/internal/trackhelper.cpp
    lgui/style/abstractstyle.h
    lgui/style/style.h
    lgui/style/styleargs.h
    lgui/style/defaultstyle.h
    lgui/style/defaultstyle.cpp
    lgui/style/defaultstyle2ndborder.h
    lgui/style/defaultstyle2ndborder.cpp
    lgui/style/defaultstylecolorscheme.h
    lgui/style/defaultstylecolorscheme.cpp
    lgui/widgets/abstractbutton.h
    lgui/widgets/abstractbutton.cpp
    lgui/widgets/checkbox.h
    lgui/widgets/checkbox.cpp
    lgui/widgets/container.h
    lgui/widgets/container.cpp
    lgui/widgets/dropdown.h
    lgui/widgets/dropdown.cpp
    lgui/widgets/frame.h
    lgui/widgets/frame.cpp
    lgui/widgets/pushbutton.h
    lgui/widgets/pushbutton.cpp
    lgui/widgets/radiobutton.h
    lgui/widgets/radiobutton.cpp
    lgui/widgets/scrollarea.cpp
    lgui/widgets/scrollarea.h
    lgui/widgets/scrollbar.cpp
    lgui/widgets/scrollbar.h
    lgui/widgets/slider.cpp
    lgui/widgets/slider.h
    lgui/widgets/spinner.cpp
    lgui/widgets/spinner.h
    lgui/widgets/stackedcontainer.h
    lgui/widgets/stackedcontainer.cpp
    lgui/widgets/textfield.h
    lgui/widgets/textfield.cpp
    lgui/widgets/textbox.h
    lgui/widgets/textbox.cpp
    lgui/widgets/wrapwidget.h
    lgui/widgets/wrapwidget.cpp
    lgui/widgets/buttons/helperbutton.h
    lgui/widgets/buttons/helperbutton.cpp
    lgui/widgets/buttons/scaledimagebutton.h
    lgui/widgets/buttons/scaledimagebutton.cpp
    lgui/widgets/buttons/imagebutton.h
    lgui/widgets/buttons/imagebutton.cpp
    lgui/widgets/labels/imagelabel.cpp
    lgui/widgets/labels/imagelabel.h
    lgui/widgets/labels/scaledimagelabel.cpp
    lgui/widgets/labels/scaledimagelabel.h
    lgui/widgets/labels/textlabel.cpp
    lgui/widgets/labels/textlabel.h
    lgui/widgets/labels/wordwraptextlabel.cpp
    lgui/widgets/labels/wordwraptextlabel.h
    lgui/widgets/listbox/stringlistview.h
    lgui/widgets/listbox/stringlistview.cpp
    lgui/widgets/listbox/stringlistmodel.h
    lgui/widgets/listbox/listmodellistener.h
    lgui/widgets/listbox/abstractlistmodel.cpp
    lgui/widgets/listbox/abstractlistmodel.h
    lgui/widgets/listbox/listbox.h
    lgui/widgets/tabs/tab.h
    lgui/widgets/tabs/tab.cpp
    lgui/widgets/tabs/tabbar.h
    lgui/widgets/tabs/tabbar.cpp
    lgui/widgets/tabs/tabwidget.h
    lgui/widgets/tabs/tabwidget.cpp
    lgui/layout/alignlayout.h
    lgui/layout/alignlayout.cpp
    lgui/layout/boxlayout.h
    lgui/layout/boxlayout.cpp
    lgui/layout/hboxlayout.h
    lgui/layout/vboxlayout.h
    lgui/layout/flowlayout.h
    lgui/layout/flowlayout.cpp
    lgui/layout/layout.h
    lgui/layout/layout.cpp
    lgui/layout/layoutitem.h
    lgui/layout/layoutitem.cpp
    lgui/layout/relativelayout.h
    lgui/layout/relativelayout.cpp
    lgui/layout/relativelayouthelpers.h
    lgui/layout/relativelayouthelpers.cpp
    lgui/layout/simpletablelayout.h
    lgui/layout/simpletablelayout.cpp
    lgui/layout/sortedflowlayout.h
    lgui/layout/sortedflowlayout.cpp
    lgui/platform/bitmap.h
    lgui/platform/clipboard.h
    lgui/platform/color.h
    lgui/platform/error.h
    lgui/platform/error.cpp
    lgui/platform/events.h
    lgui/platform/font.h
    lgui/platform/font.cpp
    lgui/platform/graphics.h
    lgui/platform/graphics.cpp
    lgui/platform/ninepatch.h
    lgui/platform/ninepatchbase.h
    lgui/platform/ninepatchbase.cpp
    lgui/platform/primhelper.h
    lgui/platform/stringfmt.h
    lgui/platform/stringfmt.cpp
    lgui/platform/transform.h
    lgui/platform/utf8.h
    lgui/platform/utf8.cpp
    lgui/platform/a5/a5bitmap.cpp
    lgui/platform/a5/a5bitmap.h
    lgui/platform/a5/a5clipboard.h
    lgui/platform/a5/a5color.h
    lgui/platform/a5/a5events.cpp
    lgui/platform/a5/a5events.h
    lgui/platform/a5/a5error.h
    lgui/platform/a5/a5error.cpp
    lgui/platform/a5/a5font.cpp
    lgui/platform/a5/a5font.h
    lgui/platform/a5/a5graphics.cpp
    lgui/platform/a5/a5graphics.h
    lgui/platform/a5/a5ninepatch.cpp
    lgui/platform/a5/a5ninepatch.h
    lgui/platform/a5/a5primhelper.cpp
    lgui/platform/a5/a5primhelper.h
    lgui/platform/a5/a5transform.h
    lgui/platform/a5/a5transform.cpp
    )

add_library(lgui ${sources_lgui})

target_include_directories(lgui PRIVATE .)